<resources>
    <string name="app_name">Nirman 2.0</string>
    <string name="developed_by_sipc_copyright_2022">© Developed by SIPC, copyright 2022</string>
    <string name="image_of_nirmal_logo">Image of Nirmal Logo</string>
    <string name="hacknation_ideathon">HackNation || Ideate</string>
    <string name="welcome">Welcome</string>
    <string name="rise_with_technology">Rise with Technology</string>
    <string name="robo_race_line_follower">Robo Race || Line Follower</string>
    <string name="check_leaderboard">Check Leaderboard</string>
    <string name="rate_co_participants">Rate Co-Participants</string>
    <string name="to_do_list">To Do List</string>
    <string name="request_help">Request Help</string>
    <string name="food_coupoun_s">Food Coupoun\'s</string>
    <string name="my_qr">My Qr</string>
    <string name="low">Low</string>
    <string name="current_risk_level">Current Risk Level</string>
    <string name="the_devlooper_s">The Devlooper\'s</string>
    <string name="allowedName">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz ,.()-_</string>
    <string name="add_volunteer_s">Add Volunteer\'s</string>
    <string name="sic">SIC</string>
    <string name="name">Name</string>
    <string name="user_role">User Role</string>
    <string name="select_user_type">Select User Type</string>
    <string name="generate_id">Generate ID</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_teams">Add Teams</string>
    <string name="addNew">Add New</string>
    <string name="save">save</string>
    <string name="hint_Title">Title</string>
    <string name="hint_selectDate">Select date</string>
    <string name="id">ID : </string>
    <string name="updateShop">Update your shop or Organization details</string>
    <string name="contactDetails">Contact Details</string>
    <string name="workDayTime">Working Days and Times</string>
    <string name="shopAbout">Shop abouts and Images</string>
    <string name="uploadImages">Upload your shop or organization Images</string>
    <string name="editShopName">Name<font color='#FF0000'>*</font></string>
    <string name="editCategory">Category<font color='#FF0000'>*</font></string>
    <string name="editOwnerName">Owner Name<font color='#FF0000'>*</font></string>
    <string name="workingTime">Working Time</string>
    <string name="workingDays">Working Days</string>
    <string name="description">Description</string>
    <string name="hint_enterShopName">Enter shop or organization name</string>
    <string name="hint_shopCategory">Enter shop or organization category</string>
    <string name="hint_ownerName">eg. John</string>
    <string name="hint_shopLocation">eg. Bypass road, calicut</string>
    <string name="hint_time">7:00 am - 5:00 pm</string>
    <string name="hint_days">Monday - Friday</string>
    <string name="hint_desc">About shop</string>
    <string name="upload">Upload</string>
    <string name="showAll">Show all</string>
    <string name="long_text">Kotlin is a great fit for developing Android applications, bringing all of the advantages of a modern language to the Android platform without introducing any new restrictions.</string>
    <string name="team_lead_name">Team-Lead Name:</string>
    <string name="team_lead_ph_no">Team-Lead Ph No. :</string>
    <string name="check_points_cleared">Check Points Cleared :</string>
    <string name="lorem">lorem</string>
    <string name="hand_touches">Hand Touches :</string>
    <string name="bonus">Bonus :</string>
    <string name="time_out_taken">Time Out Taken :</string>
    <string name="check_point_skipped">Check Point Skipped :</string>
    <string name="total_time_taken">Total Time Taken :</string>
    <string name="total">Total :</string>
    <string name="call">Call</string>
    <string name="team_name">Team Name :</string>
    <string name="team_developers">Team Developers</string>
    <string name="college_name">College Name:</string>
    <string name="silicon_institute_of_technology">Silicon Institute Of Technology</string>
    <string name="check_in_status">Check-in Status:</string>
    <string name="not_checked_in">Not Checked-In</string>
    <string name="food_preference">Food Preference</string>
    <string name="request_help_1">Request Help</string>
    <string name="request_help_2">Request Help</string>
    <string name="select_type">Select Type</string>
    <string name="submit">Submit</string>
    <string name="ideate">IDEATE</string>
    <string name="evaluate_current_project">Evaluate current project</string>
    <string name="team_name_1">Team Name</string>
    <string name="enter_team_name_1">Enter Team Name</string>
    <string name="college_name_1">College Name</string>
    <string name="required">Required</string>
    <string name="enter_college_name">Enter College Name</string>
    <string name="project_detail_s">Project Detail\'s</string>
    <string name="problem_statement">Problem Statement</string>
    <string name="pitch_details">Pitch Details</string>
    <string name="suggested_idea">Suggested Idea</string>
    <string name="marking_s">Marking\'s</string>
    <string name="how_impressive_is_the_problem_statement_choosen">How impressive is the problem statement Choosen</string>
    <string name="is_the_idea_ready_for_market_did_the_team_achieve_the_required_business_model">Is the idea ready for market? Did the team achieve the required Business Model?</string>
    <string name="is_the_solution_feasible_to_implement">Is the solution feasible to implement ?</string>
    <string name="presentation">Presentation</string>
    <string name="skill">Skill</string>
    <string name="suggestion">Suggestion</string>
    <string name="suggestion_1">Suggestion</string>
    <string name="submit_1">Submit</string>
    <string name="suggestion_to_the_team">Suggestion To The Team</string>
    <string name="review_co_participants">Review Co-Participants</string>
    <string name="team_name_2">Team Name</string>
    <string name="enter_team_name">Enter Team Name</string>
    <string name="how_impressive_is_the_problem_statement_choosen_1">How impressive is the problem statement Choosen</string>
    <string name="is_the_idea_ready_for_market_did_the_team_achieve_the_required_business_model_1">Is the idea ready for market? Did the team achieve the required Business Model?</string>
    <string name="suggestion_2">Suggestion</string>
    <string name="is_the_solution_feasible_to_implement_3">Is the solution feasible to implement ?</string>
    <string name="submit_4">Submit</string>
    <string name="suggestion_to_the_team_5">Suggestion To The Team</string>
    <string name="suggestion_0">Suggestion</string>
    <string name="suggestion_s">Suggestion\'s</string>
    <string name="add_issue">Add Issue</string>
    <string name="select_type_9">Select Type</string>
    <string name="description_0">Description</string>
    <string name="description_9">Description</string>
    <string name="submit_9">Submit</string>
    <string name="add_new_team">Add New Team</string>
    <string name="select_the_event">Select The Event</string>
    <string name="team_name_9">Team Name</string>
    <string name="problem_statement_9">Problem Statement</string>
    <string name="approach_to_problem">Approach to Problem</string>
    <string name="college_name_8">College Name</string>
    <string name="team_lead_name_9">Team Lead Name</string>
    <string name="team_lead_phone">Team Lead Phone</string>
    <string name="member_1_name">Member-1 Name</string>
    <string name="member_1_phone">Member-1 Phone</string>
    <string name="member_2_phone">Member-2 Phone</string>
    <string name="member_2_name">Member-2 Name</string>
    <string name="choose_the_size_of_the_team">Choose the size of the team</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="member_3_name">Member-3 Name</string>
    <string name="member_3_phone">Member-3 Phone</string>
    <string name="add_the_team">Add The Team</string>
    <string name="address_issues">Address Issues</string>
    <string name="developer">Developer</string>
    <string name="check_in">Check-In</string>
    <string name="address_issues_0">Address Issues</string>
    <string name="scan_food_coupoun_s">Scan Food-Coupoun\'s</string>
    <string name="view_team_details">View Team Details</string>
    <string name="add_volunteer_s_0">Add volunteer\'s</string>
    <string name="nirmal_kumar">Nirmal Kumar</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp">OTP</string>
    <string name="no_otp">No OTP</string>
    <string name="re_send">Re-Send</string>
    <string name="sign_in">Sign-In</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="sic_0">SIC</string>
    <string name="password_0">Password</string>
    <string name="login">Login</string>
    <string name="participant_sign_in">Participant? Sign-in</string>
    <string name="nirmal_kumar_0">Nirmal Kumar</string>
    <string name="developer_0">Developer</string>
    <string name="evaluate_project_s">Evaluate Project\'s</string>
    <string name="event">Event :</string>
    <string name="evaluate_current_project_0">Evaluate current project</string>
    <string name="required_0">Required</string>
    <string name="team_name_0">Team Name</string>
    <string name="enter_team_name_0">Enter Team Name</string>
    <string name="college_name_0">College Name</string>
    <string name="enter_college_name_0">Enter College Name</string>
    <string name="project_detail_s_0">Project Detail\'s</string>
    <string name="problem_statement_0">Problem Statement</string>
    <string name="problem_statement_8">Problem Statement</string>
    <string name="suggested_approach">Suggested Approach</string>
    <string name="marking_s_0">Marking\'s</string>
    <string name="how_technically_impressive_was_the_hack_was_the_technical_problem_the_team_tackled_difficult_did_it_use_a_particularly_clever_technique_or_did_it_use_many_different_components_did_the_technology_involved_make_you_go_wow">How technically impressive was the hack? Was the technical problem the team tackled difficult? Did it use a particularly clever technique or did it use many different components? Did the technology involved make you go \'Wow\'?</string>
    <string name="did_the_team_put_thought_into_the_user_experience_how_well_designed_is_the_interface_for_a_website_this_might_be_about_how_beautiful_the_css_or_graphics_are_for_a_hardware_project_it_might_be_more_about_how_good_the_human_computer_interaction_is_e_g_is_it_easy_to_use_or_does_it_use_a_cool_interface">Did the team put thought into the user experience? How well designed is the interface? For a website, this might be about how beautiful the CSS or graphics are. For a hardware project, it might be more about how good the human-computer interaction is (e.g. is it easy to use or does it use a cool interface?)</string>
    <string name="does_the_hack_work_did_the_team_achieve_everything_they_wanted">Does the hack work? Did the team achieve everything they wanted?</string>
    <string name="are_you_sure_to_confirm_check_in">Are you sure to Confirm Check-In?</string>
    <string name="valid_college_id">Valid College ID</string>
    <string name="all_the_team_member_s_present">All the Team-Member\'s Present</string>
    <string name="id_card_s_handed_over">Id Card\'s Handed Over</string>
    <string name="sticker_s_and_all">Sticker\'s and all</string>
    <string name="cancel">Cancel</string>
    <string name="checkin">Checkin</string>
</resources>